# AI_API

./: .dockerignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  sqlite.db
src/: main.py
src/routers/: ai.py  auth.py
src/utils/: auth.py  database.py  error_handler.py  files_manager.py  logger.py  models.py
