[tool.poetry]
name = "ai-api"
version = "0.1.0"
description = ""
authors = ["Murali Anand <71955467+muralianand12345@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
langchain = "^0.3.4"
langchain-groq = "^0.2.0"
python-dotenv = "^1.0.1"
langchain-nvidia-ai-endpoints = "^0.3.1"
uvicorn = "^0.32.0"
python-multipart = "^0.0.12"
langchain-community = "^0.3.3"
passlib = "^1.7.4"
jwt = "^1.3.1"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
pypdf = "^5.0.1"
faiss-cpu = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
